[package]
name = "sandgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9.0"
beryllium = { version = "0.8.0", features = ["use-raw-window-handle"] }
env_logger = "0.9"
fermium = { version = "20022.0.0", default-features = false }
zstring = "0.1"
log = "0.4"
gridmath = { path = "gridmath" }
sandworld = { path = "sandworld" }