[package]
name = "sandgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gridmath = { path = "gridmath" }
sandworld = { path = "sandworld" }
bevy = { version = "0.13.1" }
noise = "0.8"
rand = "0.8.5"
bevy_rapier2d = "0.25"