[package]
name = "sandgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gridmath = { path = "gridmath" }
sandworld = { path = "sandworld" }
bevy = { version = "0.13.1" }
noise = "0.8"
rand = "0.8.5"
bevy_rapier2d = { version = "0.25" }
rayon = "1.5"

# Use compiler optimizations for physics even in debug
[profile.dev.package.bevy_rapier2d]
opt-level = 3

# Use compiler optimizations for engine even in debug
[profile.dev.package.bevy]
opt-level = 3